--- a/ui/index.html
+++ b/ui/index.html
@@ -10,5 +10,8 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <footer>
+      <p>© 2024 All Rights Reserved by Ajas, Sudhi, Adithya, Anandhu</p>
+    </footer>
   </body>
 </html>
